--- a/lab2/src/main/resources/templates/example.html
+++ b/lab2/src/main/resources/templates/example.html
@@ -2,5 +2,7 @@
 <body style="background: orange">
     <img src="/images/windows.jpeg" />
     <img src="/images/windows.png" />
+    <a href="/plik.txt">txt</a>
+    <a href="/plik.zip">zip</a>
 </body>
 </html>
